# rc-car

./: .gitignore  ecosystem-c.json  mavlink-client  mediamtx.yml  package.json  pm2-ecosystem-javascript.json  raspberry_pi_client.service  template.service
client/c/: .env.example  CMakeLists.txt  dualshock.c  dualshock.h  joystick.c  joystick.h  main.c  rc-car.c  rc-car.h  udp.c  udp.h  websocket.c  websocket.h
client/c/libs/mavlink/minimal/: mavlink.h  minimal.h  version.h
client/c/libs/mavlink/standard/: standard.h  version.h
client/c/utils/: joystick.util.c  joystick.util.h  mavlink.util.c  mavlink.util.h
client/javascript/: .env.local  angular.json  capacitor.config.ts  package.json
client/javascript/src/: .env.example  env.d.ts  index.html
client/javascript/src/app/: app.component.html  app.component.ts  app.service.ts
map/: .env.example  .env.local  README.md  angular.json  package.json
map/src/: .env.example  env.d.ts  index.html
map/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.service.ts
raspberry-pi-client/c/: .env.example  CMakeLists.txt  main.c  mediamtx.yml  pigpio-mock.c  pigpio-mock.h  rc-car.c  rc-car.h  udp.c  udp.h  websocket.c  websocket.h
raspberry-pi-client/c/libs/mavlink/common/: common.h  mavlink.h  version.h
raspberry-pi-client/c/libs/mavlink/standard/: mavlink.h
raspberry-pi-client/javascript/: .env.example  index.mjs  mediamtx.yml  package.json
websocket-server/c/: CMakeLists.txt  main.c
websocket-server/javascript/: index.mjs  package.json
